working user REST

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #
 # JDBC properties
 #
-#spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false&serverTimezone=UTC
-#spring.datasource.username=springstudent
-#spring.datasource.password=springstudent
+spring.datasource.url=jdbc:mysql://localhost:3306/db_euro_bet?useSSL=false&serverTimezone=UTC
+spring.datasource.username=eurobet
+spring.datasource.password=eurobet#1234
