--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/db_euro_bet?useSSL=false&serverTimezone=UTC
 spring.datasource.username=eurobet
 spring.datasource.password=eurobet#1234
+
+server.servlet.session.cookie.secure=false
+server.servlet.session.cookie.http-only=false
