--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.password=eurobet#1234
 
 server.servlet.session.cookie.secure=false
 server.servlet.session.cookie.http-only=false
+
+#
+# Frond end app properties
+#
+frontend.app.enabled=false
