move to separate directory

--- a/monolith/.gitignore
+++ b/monolith/.gitignore
@@ -3,10 +3,6 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-*/*.iml
-*/target
-.mvn
-mvn*
 
 ### STS ###
 .apt_generated
@@ -18,10 +14,11 @@ mvn*
 .sts4-cache
 
 ### IntelliJ IDEA ###
-*.idea*
+*.idea
 *.iws
 *.iml
 *.ipr
+**/.idea
 
 ### NetBeans ###
 /nbproject/private/
