--- a/match-api/src/main/resources/application.yaml
+++ b/match-api/src/main/resources/application.yaml
@@ -4,3 +4,7 @@ spring:
     mongodb:
       port: 27017
       host: localhost
+
+logging.level:
+  org.springframework.data.mongodb.core.ReactiveMongoTemplate: DEBUG
+  org.springframework.cache: TRACE
