--- a/match-api/pom.xml
+++ b/match-api/pom.xml
@@ -21,6 +21,7 @@
   <properties>
     <java.version>17</java.version>
     <spring-cloud.version>2021.0.3</spring-cloud.version>
+    <spring-doc.version>1.6.9</spring-doc.version>
   </properties>
 
   <dependencyManagement>
@@ -56,9 +57,21 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-webflux-core</artifactId>
+      <version>${spring-doc.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-webflux-ui</artifactId>
+      <version>${spring-doc.version}</version>
     </dependency>
 
     <dependency>
