--- a/match-management/match-dashboard/pom.xml
+++ b/match-management/match-dashboard/pom.xml
@@ -19,6 +19,13 @@
       <artifactId>match-service</artifactId>
       <version>${project.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.github.tomakehurst</groupId>
+      <artifactId>wiremock</artifactId>
+      <version>2.27.2</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
