--- a/match-management/match-dashboard/src/main/resources/application.yaml
+++ b/match-management/match-dashboard/src/main/resources/application.yaml
@@ -1,1 +1,7 @@
 server.port: 8081
+
+########################
+# Logging
+########################
+logging.level:
+  com.piter.match.service: DEBUG
