--- a/match-api/pom.xml
+++ b/match-api/pom.xml
@@ -24,7 +24,7 @@
     <spring-cloud.version>2021.0.3</spring-cloud.version>
     <spring-doc.version>1.6.11</spring-doc.version>
     <testcontainers.version>1.17.3</testcontainers.version>
-    <cucumber.version>7.4.1</cucumber.version>
+    <cucumber.version>7.6.0</cucumber.version>
     <rest-assured.version>5.1.1</rest-assured.version>
     <awaitility.version>4.2.0</awaitility.version>
   </properties>
@@ -184,22 +184,6 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>build-info</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <excludes>
-            <exclude>
-              <groupId>org.projectlombok</groupId>
-              <artifactId>lombok</artifactId>
-              <version>${project.lombok.version}</version>
-            </exclude>
-          </excludes>
-        </configuration>
       </plugin>
 
       <plugin>
@@ -233,6 +217,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
         <configuration>
           <useFile>false</useFile>
           <includes>
