--- a/bet-event-aggregator/src/main/resources/application.yaml
+++ b/bet-event-aggregator/src/main/resources/application.yaml
@@ -1,35 +1,19 @@
 spring.application.name: bet-event-aggregator
 
-#spring.kafka.bootstrap-servers: ${KAFKA_URL}
+spring.kafka.bootstrap-servers: localhost:9092
 
 spring.cloud.stream:
-#  function.definition: bets
   bindings:
-    bets-in-0.destination: sample-bet-request
-    bets-in-1.destination: sample-match-2
-    bets-out-0.destination: sample-bet
+    bets-in-0.destination: sample-bet-request-topic
+    bets-in-1.destination: sample-match-topic-3
+    bets-out-0.destination:  sample-bet-topic
   kafka:
-    binder:
-      brokers: localhost:9092
-    bindings:
-      bets-in-0:
-        consumer:
-          configuration:
-#            key.deserializer: org.apache.kafka.common.serialization.LongDeserializer
-            value.deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-      bets-in-1:
-        consumer:
-          configuration:
-#            key.deserializer: org.apache.kafka.common.serialization.LongDeserializer
-            value.deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-      bets-out-0:
-        producer:
-          configuration:
-#            key.serializer: org.apache.kafka.common.serialization.LongSerializer
-            value.serializer: org.springframework.kafka.support.serializer.JsonSerializer
     streams.binder:
       deserializationExceptionHandler: logAndContinue
       functions.orders.applicationId: bets
+      configuration:
+        default.key.serde: org.apache.kafka.common.serialization.Serdes$LongSerde
+        spring.json.trusted.packages: "*"
 
 ##################################################
 # Betting and correct prediction rules and points
