--- a/bet-api/src/main/resources/application.yaml
+++ b/bet-api/src/main/resources/application.yaml
@@ -28,9 +28,9 @@ spring.cloud.stream:
             key.deserializer: org.apache.kafka.common.serialization.LongDeserializer
   bindings:
     bets-out-0:
-      destination: sample-bet-request-topic
+      destination: sample-bet-request-topic-2
     bets-in-0:
-      destination: sample-bet-topic-2
+      destination: sample-bet-topic
 
 ########################
 # Kafka Match producer
