--- a/bet-api/src/main/resources/application.yaml
+++ b/bet-api/src/main/resources/application.yaml
@@ -37,6 +37,13 @@ spring.cloud.stream:
 ########################
 bet.producer.binding: bets-out-0
 
+########################
+# Security
+########################
+spring.security.oauth2.resourceserver.opaqueToken:
+  introspection-uri: http://localhost:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/token/introspect
+  client-id: bet-login-app
+  client-secret: gxFjfVmqSQSLLvufqVpniY0qvfqpEnWt
 
 ########################
 # Logging
