--- a/match-management/src/main/resources/application.yaml
+++ b/match-management/src/main/resources/application.yaml
@@ -30,6 +30,23 @@ match-api:
   url: localhost:${match-api.port}
 
 ########################
+# OAuth2 Security
+########################
+spring.security.oauth2.client:
+  registration.match-management:
+    client-id: match-management-app
+    client-secret: fTHaBawFrT8HySTU1FPFqA2EmMaURV9o
+    authorization-grant-type: authorization_code
+    scope: openid, roles
+    redirect-uri: http://localhost:8081/login/oauth2/code/match-management
+  provider.match-management:
+    authorization-uri: http://localhost:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/auth
+    token-uri: http://localhost:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/token
+    jwk-set-uri: http://localhost:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/certs
+    user-info-uri: http://localhost:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/userinfo
+    user-name-attribute: preferred_username
+
+########################
 # Logging
 ########################
 logging.level:
