--- a/bet-frontend/package.json
+++ b/bet-frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "ng2-cookies": "^1.0.12",
     "primeflex": "^3.2.1",
     "primeng": "^14.1.2",
     "rxjs": "~7.5.0",
