--- a/match-api/src/main/resources/application.yaml
+++ b/match-api/src/main/resources/application.yaml
@@ -61,12 +61,12 @@ info:
 ########################
 # Security
 ########################
-security.mode: false
+security.mode: true
 
 spring.security.oauth2.resourceserver.opaqueToken:
   introspection-uri: http://localhost:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/token/introspect
   client-id: bet-login-app
-  client-secret: ZLPIcssOrobIHwvYd30ndhXQoqQHXBKS
+  client-secret: 4vu452RHRNcnOJlv7wZ2pjrrcoIXtsO0
 
 ########################
 # Swagger
