--- a/bet-api/src/main/resources/application.yaml
+++ b/bet-api/src/main/resources/application.yaml
@@ -23,11 +23,11 @@ spring.cloud.stream:
       bets-out-0:
         producer:
           configuration:
-            key.serializer: org.apache.kafka.common.serialization.LongSerializer
+            key.serializer: org.apache.kafka.common.serialization.StringSerializer
       bets-in-0:
         consumer:
           configuration:
-            key.deserializer: org.apache.kafka.common.serialization.LongDeserializer
+            key.deserializer: org.apache.kafka.common.serialization.StringDeserializer
   bindings:
     bets-out-0:
       destination: sample-bet-request-topic-2
