Update shared library to use cloud config server in separate module

--- a/shared-library/pom.xml
+++ b/shared-library/pom.xml
@@ -6,6 +6,7 @@
 
   <modules>
     <module>api-commons</module>
+    <module>security-commons</module>
   </modules>
 
   <parent>
@@ -17,7 +18,7 @@
 
   <groupId>com.piter</groupId>
   <artifactId>shared-library</artifactId>
-  <version>0.0.2-SNAPSHOT</version>
+  <version>0.0.3-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>shared-library</name>
@@ -25,12 +26,14 @@
 
   <properties>
     <java.version>17</java.version>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter</artifactId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
     </dependency>
 
     <dependency>
