--- a/bet-api/pom.xml
+++ b/bet-api/pom.xml
@@ -22,6 +22,7 @@
     <java.version>17</java.version>
     <spring-cloud.version>2021.0.3</spring-cloud.version>
     <awaitility.version>4.2.0</awaitility.version>
+    <bet.commons.version>0.0.3-SNAPSHOT</bet.commons.version>
   </properties>
 
   <dependencies>
@@ -29,7 +30,12 @@
     <dependency>
       <groupId>com.piter</groupId>
       <artifactId>api-commons</artifactId>
-      <version>0.0.2-SNAPSHOT</version>
+      <version>${bet.commons.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.piter</groupId>
+      <artifactId>security-commons</artifactId>
+      <version>${bet.commons.version}</version>
     </dependency>
 
     <!-- Other -->
