--- a/bet-gateway/pom.xml
+++ b/bet-gateway/pom.xml
@@ -57,8 +57,8 @@
     </dependency>
     <dependency>
       <groupId>com.piter</groupId>
-      <artifactId>api-commons</artifactId>
-      <version>0.0.2-SNAPSHOT</version>
+      <artifactId>security-commons</artifactId>
+      <version>0.0.3-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
