--- a/match-api/pom.xml
+++ b/match-api/pom.xml
@@ -26,6 +26,7 @@
     <cucumber.version>7.6.0</cucumber.version>
     <rest-assured.version>5.1.1</rest-assured.version>
     <awaitility.version>4.2.0</awaitility.version>
+    <bet.commons.version>0.0.3-SNAPSHOT</bet.commons.version>
   </properties>
 
   <dependencies>
@@ -43,7 +44,12 @@
     <dependency>
       <groupId>com.piter</groupId>
       <artifactId>api-commons</artifactId>
-      <version>0.0.2-SNAPSHOT</version>
+      <version>${bet.commons.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.piter</groupId>
+      <artifactId>security-commons</artifactId>
+      <version>${bet.commons.version}</version>
     </dependency>
 
     <!-- Other -->
