--- a/match-api/src/main/resources/application-INT-TEST.yml
+++ b/match-api/src/main/resources/application-INT-TEST.yml
@@ -14,6 +14,7 @@ spring:
     consumer:
       properties:
         spring.json.trusted.packages: "*"
+  cloud.config.enabled: false
 
 security.mode: false
 
