--- a/bet-config-server/src/main/resources/application.yaml
+++ b/bet-config-server/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
   cloud.config.server.git:
     uri: https://github.com/PiotrMichalowski96/bet-microservices
     clone-on-start: true
-    search-paths: bet-config-repo
+    search-paths: bet-config-repo/{application}
 
 logging.level:
   org.springframework.cloud: debug
