--- a/bet-config-repo/match-api/application-LOCAL.yaml
+++ b/bet-config-repo/match-api/application-LOCAL.yaml
@@ -1,17 +1,14 @@
 server.port: 8082
 spring:
-  data:
-    mongodb:
-      port: 27017
-      host: localhost
+  data.mongodb:
+    port: 27017
+    host: localhost
 
 ########################
 # Cloud stream
 ########################
 spring.cloud.stream:
-  kafka:
-    binder:
-      brokers: localhost:9092
+  kafka.binder.brokers: localhost:9092
   bindings:
     matches-out-0:
       destination: sample-match-topic-3
