--- a/bet-gateway/pom.xml
+++ b/bet-gateway/pom.xml
@@ -36,6 +36,14 @@
   </dependencyManagement>
 
   <dependencies>
+    <!-- Bet microservices commons -->
+    <dependency>
+      <groupId>com.piter</groupId>
+      <artifactId>security-commons</artifactId>
+      <version>0.0.3-SNAPSHOT</version>
+    </dependency>
+
+    <!-- Spring Cloud -->
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-gateway</artifactId>
@@ -44,21 +52,20 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-sleuth</artifactId>
+    </dependency>
 
+    <!-- Spring Boot -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.piter</groupId>
-      <artifactId>security-commons</artifactId>
-      <version>0.0.3-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
