Logs in json format

--- a/shared-library/api-commons/pom.xml
+++ b/shared-library/api-commons/pom.xml
@@ -52,6 +52,13 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-sleuth</artifactId>
     </dependency>
+
+    <!-- Other -->
+    <dependency>
+      <groupId>net.logstash.logback</groupId>
+      <artifactId>logstash-logback-encoder</artifactId>
+      <version>7.2</version>
+    </dependency>
   </dependencies>
 
 </project>
