--- a/match-management/pom.xml
+++ b/match-management/pom.xml
@@ -24,6 +24,8 @@
     <maven.compiler.target>17</maven.compiler.target>
     <spring-cloud.version>2021.0.3</spring-cloud.version>
     <jackson.version>2.13.3</jackson.version>
+    <docker.image.prefix>piter</docker.image.prefix>
+    <docker.image.name>${project.artifactId}</docker.image.name>
   </properties>
 
   <dependencyManagement>
@@ -105,12 +107,42 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
+          <layers>
+            <enabled>true</enabled>
+            <includeLayerTools>true</includeLayerTools>
+          </layers>
           <excludes>
             <exclude>
               <groupId>org.projectlombok</groupId>
               <artifactId>lombok</artifactId>
             </exclude>
           </excludes>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>io.fabric8</groupId>
+        <artifactId>docker-maven-plugin</artifactId>
+        <version>0.40.2</version>
+        <configuration>
+          <verbose>true</verbose>
+          <images>
+            <image>
+              <name>${docker.image.prefix}/${docker.image.name}</name>
+              <alias>${project.artifactId}</alias>
+              <build>
+                <!-- copies artifact to docker build dir in target -->
+                <assembly>
+                  <descriptorRef>artifact</descriptorRef>
+                </assembly>
+                <dockerFile>Dockerfile</dockerFile>
+                <tags>
+                  <tag>latest</tag>
+                  <tag>${project.version}</tag>
+                </tags>
+              </build>
+            </image>
+          </images>
         </configuration>
       </plugin>
     </plugins>
