Update docker compose file

--- a/doc/docker/bet-services-compose.yaml
+++ b/doc/docker/bet-services-compose.yaml
@@ -1,5 +1,46 @@
 version: '3.8'
+
+volumes:
+  postgres_data:
+    driver: local
+
+networks:
+  keycloak-network:
+    driver: bridge
+
 services:
+  postgres:
+    image: postgres
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_DB: keycloak
+      POSTGRES_USER: keycloak
+      POSTGRES_PASSWORD: password
+    container_name: keycloak-db
+    ports:
+      - "5432:5432"
+    networks:
+      - keycloak-network
+  keycloak:
+    image: quay.io/keycloak/keycloak:19.0.2
+    environment:
+      KC_DB: postgres
+      KC_DB_USERNAME: keycloak
+      KC_DB_PASSWORD: password
+      KC_DB_SCHEMA: public
+      KC_DB_URL_DATABASE: keycloak
+      KC_DB_URL_HOST: keycloak-db
+      KC_DB_URL_PORT: 5432
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    ports:
+      - "8080:8080"
+    networks:
+      - keycloak-network
+    command: "start-dev"
+    depends_on:
+      - postgres
   eureka:
     image: piter/bet-eureka
     ports:
@@ -8,7 +49,10 @@ services:
     image: piter/match-api
     ports:
       - "8082:8082"
+    networks:
+      - keycloak-network
     depends_on:
+      - keycloak
       - eureka
     environment:
       SPRING_PROFILES_ACTIVE: DOCKER
@@ -17,7 +61,10 @@ services:
     image: piter/bet-api
     ports:
       - "8083:8083"
+    networks:
+      - keycloak-network
     depends_on:
+      - keycloak
       - eureka
     environment:
       SPRING_PROFILES_ACTIVE: DOCKER
@@ -32,19 +79,26 @@ services:
     image: piter/bet-gateway
     ports:
       - "9090:9090"
+    networks:
+      - keycloak-network
     depends_on:
+      - keycloak
       - eureka
       - match-api
       - bet-api
       - bet-event-aggregator
     environment:
       SPRING_PROFILES_ACTIVE: DOCKER
+      FRONTEND_APP_URI: "http://localhost:4201"
       EUREKA_INSTANCE_PREFER_IP_ADDRESS: "true"
   match-management:
     image: piter/match-management
     ports:
       - "8081:8081"
+    networks:
+      - keycloak-network
     depends_on:
+      - keycloak
       - gateway
     environment:
       SPRING_PROFILES_ACTIVE: DOCKER
