--- a/bet-gateway/src/main/resources/application-DOCKER.yaml
+++ b/bet-gateway/src/main/resources/application-DOCKER.yaml
@@ -1,4 +1,4 @@
-frontend.app.uri: http://localhost:4201
+frontend.app.uri: "http://localhost:4201"
 
 eureka.client.serviceUrl:
   defaultZone: ${eureka.url:http://host.docker.internal:8761/eureka/}
